Add many plots example to new plots.qmd.

--- a/src/_quarto.yml
+++ b/src/_quarto.yml
@@ -11,6 +11,7 @@ book:
     - books.qmd
     - slides.qmd
     - sites.qmd
+    - plots.qmd
   repo-url: https://github.com/rogilmore/quarto-quirks
   repo-actions: [edit, issue]
   repo-subdir: src
