Add error bars section to plots.qmd; fix link to PSYCH 490 in index.qmd.

--- a/src/_quarto.yml
+++ b/src/_quarto.yml
@@ -22,3 +22,5 @@ format:
     number-sections: false
     fig-align: center
     date-modified: last-modified
+    bibliography: include/bib/refs.bib
+    html-math-method: mathjax
