--- a/src/_quarto.yml
+++ b/src/_quarto.yml
@@ -1,6 +1,10 @@
 project:
   type: book
   output-dir: "../docs"
+  
+knitr:
+  opts_chunk:
+    fig.path: include/fig/
 
 book:
   title: "Quarto Quirks"
