Minor edits to several *.qmd files.

--- a/src/_quarto.yml
+++ b/src/_quarto.yml
@@ -16,6 +16,7 @@ book:
     - slides.qmd
     - sites.qmd
     - plots.qmd
+    - diagrams.qmd
   repo-url: https://github.com/rogilmore/quarto-quirks
   repo-actions: [edit, issue]
   repo-subdir: src
